index.css
/* Import palette */
@import url("./src/css/palette.css");

/* Initialise fonts */
@font-face {
  font-family: "GothicPixel";
  src: url("./src/font/GothicPixel.otf");
}

@font-face {
  font-family: "Cozette";
  src: url("./src/font/Cozette.otf");
}

body {
	color: var(--color-fg);
	background: var(--color-bg);
	font-family: "Cozette";
}

h1, h2, h3, h4, h5 {
	font-family: "GothicPixel";
	text-transform: lowercase;
	color: var(--color-header);
}

header {
	width: 800px;
	padding: 25px;
	margin-left: 20px;
	line-height: 10px;
	text-align: center;
	white-space: pre;
	color: var(--color-accent1);
}

a:link {
	/* text-decoration: none; */
	color: var(--color-accent1);
}

a:visited {
	color: var(--color-accent1);
}

a:hover {
	color: var(--color-accent2);
}

/* Accent colour classes */
.accent1 {
	color: var(--color-accent1);
}

.accent2 {
	color: var(--color-accent2);
}


/* Layout */
.home-title {
	text-align: center;
}

#home-main {
	width: 800px;
	height: auto;
	padding: 10px;
	background-color: var(--color-bg-alt);
	margin-bottom: 20px;
}

#main {
	width: 800px;
	position: absolute;
	left: 50%;
	transform: translate(-50%, 0%);
	/* margin-left: auto; */
	/* margin-right: auto; */
}

#left {
	float: left;
	width: 500px;
	height: auto;
	padding: 10px;
	background-color: var(--color-bg-alt);
	margin-bottom: 20px;
}

#right {
	float: right;
	width: 260px;
	height: 700px;
}

#topright, #midright, #botright, #theme {
	background-color: var(--color-bg-alt);
	padding: 10px;
	margin-bottom: 20px;
}

#midright {
	height: auto;
}

#umbrella {
	max-width: 256px;
	max-height: 256px;
}

#notfound {
	background-color: var(--color-bg-alt);
	padding-top: 25px;
	margin-top: 200px;
	width: 400px;
	height: 250px;
}

.link {
	font-size: 18px;
}

.cover {
	color: var(--color-accent2);
	padding: 0px 20px;
	margin: 0;
	float: left;
	width: 150px;
}

.cover figcaption {
	text-align: center;
}

.cover img {
	height: 150px;
}

#recenttitle {
	font-size: 18px;
}

.song {
	min-height: 220px;
}

#blinkies {
	text-align: center;
	font-size: 8px;
}

ul {
	list-style: none;
}

ul li:before {
	content: '* ';
	font-weight: bold;
}

#left img {
	max-width: 500px;
}

#right img {
	max-width: 240px;
}

hr {
	border-color: var(--color-accent1);
	width: 88px;
}

